rust/codec-latex/tests/snapshots/examples__code.json.snap
---
source: rust/codec-latex/tests/examples.rs
expression: article
---
{
  "type": "Article",
  "content": [
    {
      "type": "RawBlock",
      "format": "latex",
      "content": {
        "string": "\\documentclass{article}\n\n\\begin{document}\n\n\\title{Knitting LaTeX and code with Stencila}\n\nOne plus two equals "
      }
    },
    {
      "type": "CodeChunk",
      "code": {
        "string": "1 + 2"
      }
    },
    {
      "type": "RawBlock",
      "format": "latex",
      "content": {
        "string": ".\n\nNo language or other options:\n\n"
      }
    },
    {
      "type": "CodeChunk",
      "code": {
        "string": "3\n"
      }
    },
    {
      "type": "RawBlock",
      "format": "latex",
      "content": {
        "string": "\n\nWith lang and options:\n\n"
      }
    },
    {
      "type": "CodeChunk",
      "code": {
        "string": "4\n"
      },
      "programmingLanguage": "r",
      "isEchoed": true,
      "isHidden": true
    },
    {
      "type": "RawBlock",
      "format": "latex",
      "content": {
        "string": "\n\n\\end{document}\n"
      }
    }
  ]
}
