rust/codec-latex/tests/snapshots/examples__code.tex.snap
---
source: rust/codec-latex/tests/examples.rs
expression: "&latex"
---
\documentclass{article}

\begin{document}

\title{Knitting LaTeX and code with Stencila}

One plus two equals \begin{lstlisting}[exec]
1 + 2
\end{lstlisting}

.

No language or other options:

\begin{lstlisting}[exec]
3
\end{lstlisting}



With lang and options:

\begin{lstlisting}[language=r, exec]
4
\end{lstlisting}



\end{document}
