rust/codec-latex/tests/snapshots/examples__equation-ref.coarse.tex.snap
---
source: rust/codec-latex/tests/examples.rs
expression: "&latex"
---
\documentclass{article}

\begin{document}

An autoref \autoref{eq:one}.

A ref \ref{eq:one}.

\[
a = b
\]


\end{document}
