rust/codec-latex/tests/snapshots/examples__equation-ref.fine.json.snap
---
source: rust/codec-latex/tests/examples.rs
expression: article
---
{
  "type": "Article",
  "content": [
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "An autoref "
          }
        },
        {
          "type": "Link",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "[eq:one]"
              }
            }
          ],
          "target": "#eq:one"
        },
        {
          "type": "Text",
          "value": {
            "string": "."
          }
        }
      ]
    },
    {
      "type": "Paragraph",
      "content": [
        {
          "type": "Text",
          "value": {
            "string": "A ref "
          }
        },
        {
          "type": "Link",
          "content": [
            {
              "type": "Text",
              "value": {
                "string": "[eq:one]"
              }
            }
          ],
          "target": "#eq:one"
        },
        {
          "type": "Text",
          "value": {
            "string": "."
          }
        }
      ]
    },
    {
      "type": "MathBlock",
      "code": {
        "string": "\\begin{equation}\na = b\n\\label{eq:one}\n\\end{equation}"
      },
      "mathLanguage": "tex"
    }
  ],
  "repository": "https://github.com/stencila/stencila",
  "path": "rust/codec-latex/tests/examples/equation-ref.tex",
  "commit": "redacted"
}
