rust/codec-latex/tests/snapshots/examples__for.coarse.encode.map.snap
---
source: rust/codec-latex/tests/examples.rs
expression: info.mapping
---
start     end        offsets   node_type+property                   authorship
    55     59       (55, 59)   ForBlock.variable
    61     69        (6, 10)   ForBlock.code
    71     89       (10, 20)   RawBlock.content
    71     89         (0, 0)   RawBlock
    95     99       (24, 10)   CodeExpression.code
    89    100        (-6, 1)   CodeExpression
    89    100         (0, 0)   InlinesBlock.content
    89    100         (0, 0)   InlinesBlock
   100    102        (11, 2)   RawBlock.content
   100    102         (0, 0)   RawBlock
    71    102       (-29, 0)   ForBlock.content
    43    112      (-28, 10)   ForBlock
    43    113         (0, 1)   Article.content
     0    129      (-43, 16)   Article
